temp commit for session

--- a/.env
+++ b/.env
@@ -37,7 +37,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+# MAILER_DSN=smtp://user@email.fr:pass@serveur-mail.fr:587
 ###< symfony/mailer ###
 
 ###> Admin account ###
